--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
       </form>
     </div>
 
+    <!-- Вывод инфы -->
+    <div class="mx-auto max-w-2xl text-center">
+      <h2 id="testinfo" class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl"></h2>
+    </div>
+
+
 
     <script src="script.js"></script>
   </body>
