--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -7,111 +7,90 @@
     <title>Usefulwork.ru - поиск полезной работы</title>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
   <body>
-    <div class="isolate bg-white px-6 py-24 sm:py-32 lg:px-8">
-      <div class="absolute inset-x-0 top-[-10rem] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[-20rem]" aria-hidden="true">
-        <div class="relative left-1/2 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+
+    <section class="h-auto bg-white">
+      <div class="px-10 py-5 mx-auto max-w-7xl">
+          <div class="w-full mx-auto text-left md:text-center">
+              <h1 class="mb-6 text-center text-5xl font-extrabold leading-none max-w-5xl mx-auto tracking-normal text-gray-900 sm:text-6xl md:text-6xl lg:text-7xl md:tracking-tight"><span class="w-full  bg-clip-text text-green-700 "> Ильнар </span><br class="lg:block hidden"></h1>
+              <p class="px-0 mb-0 text-2xl font-bold text-center text-gray-900 md:text-xl lg:px-24"> Добро пожаловать!<br>Бот поможет вам с легокостью найти работу или сотрудника.</p>
+          </div>
       </div>
-      <!-- Главная надпись -->
-      <div class="mx-auto max-w-2xl text-center">
-        <h2 id="hello" class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl"></h2>
-      </div>
-      <form action="#" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20">
-        <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
 
-          <!-- Блок Тип работы -->
-          <div class="sm:col-span-2">
-            <label for="country" class="block text-sm font-medium leading-6 text-gray-900">Выберите тип работы:</label>
-            <div class="mt-2">
-              <select id="type-work" name="country" autocomplete="country-name" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                <option>Постоянная</option>
-                <option>Временная</option>
-              </select>
+      <div class="mx-auto  grid max-w-screen-lg px-6 py-0 pb-20">
+        <div class="">
+          <div class="mt-4 grid max-w-3xl gap-x-4 gap-y-3 sm:grid-cols-2 md:grid-cols-3">
+
+            <div class="relative" id="createresume">
+              <input class="peer hidden" id="radio_1" type="radio" name="radio" checked />
+              <img src="images/create.png" class="absolute right-4 top-1/2 box-content block h-9 w-9 -translate-y-1/2 rounded-full peer-checked:border-emerald-400"" alt="">
+              <label class="flex h-full cursor-pointer flex-col rounded-lg p-4 shadow-lg shadow-slate-100 peer-checked:bg-emerald-600 peer-checked:text-white" for="radio_1">
+                <span class="mt-2- font-medium">Создать резюме</span>
+              </label>
+            </div>
+
+            <div class="relative" id="checkvac">
+              <input class="peer hidden" id="radio_2" type="radio" name="radio" />
+              <img src="images/watch.png" class="absolute right-4 top-1/2 box-content block h-9 w-9 -translate-y-1/2 rounded-full peer-checked:border-emerald-400"" alt="">
+              <label class="flex h-full cursor-pointer flex-col rounded-lg p-4 shadow-lg shadow-slate-100 peer-checked:bg-emerald-600 peer-checked:text-white" for="radio_2">
+                <span class="mt-2 font-medium">Смотреть вакансии</span>
+              </label>
+            </div>
+
+            <div class="relative" id="pesonal">
+              <input class="peer hidden" id="radio_3" type="radio" name="radio" />
+              <img src="images/me2.png" class="absolute right-4 top-1/2 box-content block h-9 w-9 -translate-y-1/2 rounded-full peer-checked:border-emerald-400"" alt="">
+              <label class="flex h-full cursor-pointer flex-col rounded-lg p-4 shadow-lg shadow-slate-100 peer-checked:bg-emerald-600 peer-checked:text-white" for="radio_3">
+                <span class="mt-2 font-medium">Личный кабинет</span>
+              </label>
             </div>
           </div>
-
-          <!-- Блок город -->
-          <div class="sm:col-span-2">
-            <label for="country" class="block text-sm font-medium leading-6 text-gray-900">Выберите город:</label>
-            <div class="mt-2">
-              <select id="city" name="country" autocomplete="country-name" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                <option>Балашиха</option>
-                <option>Митино</option>
-                <option>Люберцы</option>
-              </select>
-            </div>
-          </div>
-
-          <!-- Блок Категория -->
-          <div class="sm:col-span-2">
-            <label for="country" class="block text-sm font-medium leading-6 text-gray-900">Выберите категорию работы:</label>
-            <div class="mt-2">
-              <select id="category-work" name="country" autocomplete="country-name" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                <option>Моляр</option>
-                <option>Сварщик</option>
-                <option>Водитель</option>
-              </select>
-            </div>
-          </div>
+    </section>
+  
 
 
-          <!-- Блок ФИО -->
-          <div class="sm:col-span-2">
-            <label for="company" class="block text-sm font-semibold leading-6 text-gray-900">Введите ваше имя:</label>
-            <div class="mt-2.5">
-              <input type="text" name="company" id="fio" autocomplete="organization" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-            </div>
-          </div>
-
-          <!-- Блок о себе -->
-          <div class="sm:col-span-2">
-            <label for="message" class="block text-sm font-semibold leading-6 text-gray-900">Напишите подробнее о себе:</label>
-            <div class="mt-2.5">
-              <textarea name="message" id="message" rows="4" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
-            </div>
-          </div>
-        </div>
-
-        <!-- Блок оплаты -->
-        <div class="sm:col-span-2 mt-2.5">
-          <label for="price" class="block text-sm font-medium leading-6 text-gray-900">Оплата за работу:</label>
-          <div class="relative mt-2 rounded-md shadow-sm">
-            <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
-              <span class="text-gray-500 sm:text-sm">₽</span>
-            </div>
-            <input type="number" name="price" id="price" class="w-full block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="0.00">
-            <div class="absolute inset-y-0 right-0 flex items-center">
-              <label for="currency" class="sr-only">Currency</label>
-              <select id="currency" name="currency" class="h-full rounded-md border-0 bg-transparent py-0 pl-2 pr-7 text-gray-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm">
-                <option>В месяц</option>
-                <option>В день</option>
-                <option>В час</option>
-              </select>
-            </div>
-          </div>
-        </div>
-
-        <!-- Блок телефон -->
-        <div class="sm:col-span-2 mt-2.5">
-          <label for="company" class="block text-sm font-semibold leading-6 text-gray-900">Введите ваш номер телефона:</label>
-          <div class="mt-2.5">
-            <input type="number" name="company" id="phone" autocomplete="organization" placeholder="89111111114" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-          </div>
-        </div>
-
-        <div class="mt-10">
-          <button id="buttonSumbit" type="submit" class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Добавить объявление</button>
-        </div>
-      </form>
-    </div>
 
     
 
+    <script>
+        let tg = window.Telegram.WebApp;
+        let user_id = tg.initDataUnsafe.user.id;
+        let user_firstname = tg.initDataUnsafe.user.first_name;
+        let username = tg.initDataUnsafe.user.username;
+        let photo = tg.initDataUnsafe.user.photo_url;
+
+        // Вывод имено в приветствии
+        var helloElement = document.getElementById("hello");
+        helloElement.textContent = `${user_firstname}, заполните объявление!`;
 
 
-    <script src="script.js"></script>
+        // Установка ID в скрытый элемент
+        document.getElementById("userid").value = user_id;
+
+        // Скрыть элемент при нажатии на пустую область
+        document.addEventListener('click', function(event) {
+          if (event.target !== inputField) {
+          inputField.blur();
+          }
+        });
+
+
+        document.getElementById("createresume").addEventListener("click", function() {
+          window.location.href = "https://vk.com/feed";
+        });
+
+        document.getElementById("checkvac").addEventListener("click", function() {
+          window.location.href = "https://www.twitch.tv/";
+        });
+
+        document.getElementById("personal").addEventListener("click", function() {
+          window.location.href = "https://www.youtube.com/";
+        });
+
+    </script>
   </body>
 </html>
