--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
 
-
+<!-- 
     <style>
       .custom-bg {
         background-color: var(--tg-theme-bg-color);
       }
-    </style>
+    </style> -->
   </head>
 
   <body>
 
-    <section class="h-auto background-color">
+    <section class="h-auto bg-var(--tg-theme-button-color)">
       <div class="px-10 py-5 mx-auto max-w-7xl">
           <div class="w-full mx-auto text-left md:text-center">
               <h1 class="mb-6 text-center text-5xl font-extrabold leading-none max-w-5xl mx-auto tracking-normal text-gray-900 sm:text-6xl md:text-6xl lg:text-7xl md:tracking-tight"><span class="w-full  bg-clip-text text-green-700 "> Ильнар </span><br class="lg:block hidden"></h1>
