--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="h-auto bg-white">
       <div class="px-10 py-5 mx-auto max-w-7xl">
           <div class="w-full mx-auto text-left md:text-center">
-              <h1 class="mb-6 text-center text-5xl font-extrabold leading-none max-w-5xl mx-auto tracking-normal text-gray-900 sm:text-6xl md:text-6xl lg:text-7xl md:tracking-tight"><span class="w-full  bg-clip-text text-green-700 "> Ильнар </span><br class="lg:block hidden"></h1>
+              <h1 class="mb-6 text-center text-5xl font-extrabold leading-none max-w-5xl mx-auto tracking-normal text-gray-900 sm:text-6xl md:text-6xl lg:text-7xl md:tracking-tight"><span id="userid" class="w-full  bg-clip-text text-green-700 "></span><br class="lg:block hidden"></h1>
               <p class="px-0 mb-0 text-1xl font-bold text-center text-gray-900 md:text-xl lg:px-24"> <span class="px-0 mb-0 text-2xl font-bold text-center text-gray-900 md:text-xl lg:px-24">Добро пожаловать!</span><br>Бот поможет вам с легкостью найти работу или сотрудника.</p>
           </div>
       </div>
